# NSVC

./: .gitignore  .zshistory  Cargo.toml  main.py  main.spec  updateConfigs.sh
src/: main.rs  tmp_k9gyw  voice_chat.rs
