[package]
name = "NSVC"
version = "0.1.0"
edition = "2021"

[dependencies]
cpal = "0.16"
opus = "0.3.0"
arraydeque = "0.5"
chrono = "0.4.41"
libc = "0.2"

# Только для Windows-специфичных функций
[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3.9", features = ["winuser", "consoleapi"] }

[lib]
name = "voice_chat"
crate-type = ["cdylib"]
path = "src/voice_chat.rs"